# ghc-builder

./: BuildStep.hs  ClientMonad.hs  Command.hs  Config.hs  Email.hs  ExampleConfig.hs  Files.hs  Handlelike.hs  Notification.hs  README.md  SendMail.hs  ServerMonad.hs  TODO  Utils.hs  WebpageCreation.hs  builder.css  client.hs  server.hs
certs/: gencerts.sh  mkClientKey.sh  mkRoot.sh  mkServerKey.sh
client/: ClientMonad.hs  builder-client.cabal  client.hs
common/: Files.hs  Handlelike.hs  Utils.hs  builder-lib.cabal
common/Builder/: BuildSteps.hs  Command.hs  Config.hs  Files.hs  Handlelike.hs  Utils.hs
doc/: conversation.txt  files.txt  usage.txt
server/: BuildSteps_0_1.hs  BuildSteps_0_2.hs  ConfigHandler.hs  Email.hs  ExampleConfig.hs  Messager.hs  Notification.hs  SendMail.hs  ServerMonad.hs  TimeMaster.hs  WebpageCreation.hs  builder-server.cabal  server.hs
