Name: builder-client
Version: 0.1
Copyright: 2010, The University Court of the University of Glasgow.
License: BSD3
License-File: ../LICENSE
Author: Ian Lynagh <igloo@earth.li>
Maintainer: cvs-ghc@haskell.org
Synopsis: Builder client.
Description:
	Builder client.
Category: Development
build-type: Simple
cabal-version: >=1.2

Executable builder-client
    Main-Is: client.hs

    Ghc-Options: -threaded
    Ghc-Options: -Wall
    Extensions: CPP
    Build-Depends: base       >= 4   && < 5,
                   builder-lib == 0.1,
                   bytestring >= 0.9 && < 0.10,
                   directory  >= 1.0 && < 1.3,
                   filepath   >= 1.1 && < 1.2,
                   HsOpenSSL  >= 0.8 && < 0.10,
                   mtl        >= 1.1 && < 2.1,
                   network    >= 2.2 && < 2.4,
                   old-locale >= 1.0 && < 1.1,
                   process    >= 1.0 && < 1.1,
                   time       >= 1.1 && < 1.2
    if !os(windows)
        Build-Depends: unix >= 2.3 && < 2.5
        Cpp-Options: -DHAVE_SYSTEM_POSIX_RESOURCE

