Name: builder-lib
Version: 0.1
Copyright: 2010, The University Court of the University of Glasgow.
License: BSD3
License-File: ../LICENSE
Author: Ian Lynagh <igloo@earth.li>
Maintainer: cvs-ghc@haskell.org
Synopsis: Builder library.
Description:
    Builder library.
Category: Development
build-type: Simple
cabal-version: >=1.2

Library
    Exposed-Modules: Builder.BuildSteps
                     Builder.Command
                     Builder.Config
                     Builder.Files
                     Builder.Handlelike
                     Builder.Utils
    Extensions: DeriveDataTypeable, GeneralizedNewtypeDeriving
    Ghc-Options: -Wall
    Build-Depends: base        >= 4   && < 5,
                   bytestring  >= 0.9 && < 0.10,
                   directory   >= 1.0 && < 1.3,
                   filepath    >= 1.1 && < 1.4,
                   HsOpenSSL   >= 0.8 && < 0.11,
                   mtl         >= 1.1 && < 2.1,
                   network     >= 2.2 && < 2.4,
                   process     >= 1.0 && < 1.2,
                   time        >= 1.1 && < 1.5

