Name: builder-server
Version: 0.1
Copyright: 2010, The University Court of the University of Glasgow.
License: BSD3
License-File: ../LICENSE
Author: Ian Lynagh <igloo@earth.li>
Maintainer: cvs-ghc@haskell.org
Synopsis: Builder server.
Description:
	Builder server.
Category: Development
build-type: Simple
cabal-version: >=1.2

Executable builder-server
    Main-Is: server.hs

    Ghc-Options: -threaded
    Ghc-Options: -Wall
    Extensions: PatternGuards, ForeignFunctionInterface,
                MultiParamTypeClasses, FunctionalDependencies,
                UndecidableInstances
    Build-Depends: base        >= 4   && < 5,
                   builder-lib == 0.1,
                   directory   >= 1.0 && < 1.3,
                   filepath    >= 1.1 && < 1.4,
                   ghc         >= 7.4,
                   ghc-paths   >= 0.1 && < 0.2,
                   HsOpenSSL   >= 0.8 && < 0.11,
                   mime-string >= 0.4 && < 0.5,
                   mtl         >= 1.1 && < 2.1,
                   network     >= 2.2 && < 2.4,
                   old-locale  >= 1.0 && < 1.1,
                   process     >= 1.0 && < 1.2,
                   time        >= 1.1 && < 1.5,
                   unix        >= 2.3 && < 2.6,
                   xhtml       >= 3000.2 && < 3000.3

